RESOLVED FIXED83735
Invalid Union Reference in StructureStubInfo.{cpp.h}
https://bugs.webkit.org/show_bug.cgi?id=83735
Summary Invalid Union Reference in StructureStubInfo.{cpp.h}
Michael Saboff
Reported 2012-04-11 17:23:49 PDT
There are two places that u.getByIdProtoList and u.getByIdSelfList are mixed in StructureStubInfo.h and .cpp. Since these union members are copies, this doesn't cause any issues but should be cleaned up.
Attachments
Patch (2.22 KB, patch)
2012-04-11 17:26 PDT, Michael Saboff
no flags
Michael Saboff
Comment 1 2012-04-11 17:26:06 PDT
WebKit Review Bot
Comment 2 2012-04-11 18:38:58 PDT
Comment on attachment 136796 [details] Patch Clearing flags on attachment: 136796 Committed r113935: <http://trac.webkit.org/changeset/113935>
WebKit Review Bot
Comment 3 2012-04-11 18:39:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.