Invalid Union Reference in StructureStubInfo.{cpp.h} https://bugs.webkit.org/show_bug.cgi?id=83735

Reviewed by Filip Pizlo.

Changed the references to u.getByIdProtoList and u.getByIdSelfList
to be consistent.

* bytecode/StructureStubInfo.cpp:
(JSC::StructureStubInfo::visitWeakReferences):
* bytecode/StructureStubInfo.h:
(JSC::StructureStubInfo::initGetByIdSelfList):


Canonical link: https://commits.webkit.org/101230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113935 268f45cc-cd09-0410-ab3c-d52691b4dbfc